--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "前端脚手架",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "start": "webpack-dev-server --config build/webpack.config.dev.js",
+    "build": "webpack --config build/webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +14,8 @@
   "author": "李勇",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
+    "@babel/runtime-corejs3": "^7.27.6",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "react": "^18.3.1",
@@ -21,27 +23,35 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
+    "@babel/plugin-proposal-decorators": "^7.27.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.27.4",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.3",
     "@types/react": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-import": "^1.13.8",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.5",
-    "babel-loader": "^8.3.0",
-    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "less": "^4.3.0",
     "less-loader": "^12.2.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "prettier": "^3.2.5",
     "style-loader": "^4.0.0",
     "typescript": "^5.8.3",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^3.11.3",
+    "webpack-merge": "^4.2.2"
   }
 }
