--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config build/webpack.config.dev.js",
-    "build": "webpack --config build/webpack.config.prod.js"
+    "build": "webpack --config build/webpack.config.prod.js",
+    "analyze": "cross-env ANALYZE=true  npm run build"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "babel-loader": "^8.3.0",
     "babel-plugin-import": "^1.13.8",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -50,6 +52,7 @@
     "style-loader": "^4.0.0",
     "typescript": "^5.8.3",
     "webpack": "^4.47.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.3",
     "webpack-merge": "^4.2.2"
