--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "5.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
@@ -31,8 +32,9 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.3",
     "@types/react": "^19.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-import": "^1.13.8",
     "clean-webpack-plugin": "^4.0.0",
