路由更改完善

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,8 @@
         "baseUrl": ".",
         "paths": {
             "@pages/*": ["./src/pages/*"],
-            "@router/*": ["./src/router/*"]
+            "@router/*": ["./src/router/*"],
+            "@layout/*": ["./src/layout/*"]
         }
     }
 }
