项目结构完善

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,9 @@
         "paths": {
             "@pages/*": ["./src/pages/*"],
             "@router/*": ["./src/router/*"],
-            "@layout/*": ["./src/layout/*"]
+            "@layout/*": ["./src/layout/*"],
+            "@model/*": ["./src/model/*"],
+            "@service/*": ["./src/service/*"]
         }
     }
 }
