--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true
     },
-    "include": ["src", "App.tsx"],
+    "include": ["src", "App.tsx","vite.config.ts"],
     "exclude": ["node_modules", "build"],
     "extends": "./tsconfig.paths.json"
 }
