--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --config build/webpack.config.dev.js",
     "build": "webpack --config build/webpack.config.prod.js",
-    "analyze": "cross-env ANALYZE=true  npm run build"
+    "analyze": "cross-env ANALYZE=true  npm run build",
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.6.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-import": "^1.13.8",
     "clean-webpack-plugin": "^4.0.0",
