--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
+// 编辑器控制
 {
+    "editor.tabSize": 4,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "eslint.validate": ["javascript", "typescript", "typescriptreact"],
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
+        "source.fixAll.eslint": "explicit"
     },
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 1000
