--- a/package.json
+++ b/package.json
@@ -1,69 +1,80 @@
 {
-  "name": "create-react-web",
-  "version": "1.0.0",
-  "description": "前端脚手架",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --config build/webpack.config.dev.js",
-    "build": "webpack --config build/webpack.config.prod.js",
-    "analyze": "cross-env ANALYZE=true  npm run build",
-    "dev": "vite"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/3254954760/create-react-web.git"
-  },
-  "author": "李勇",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/runtime": "^7.27.6",
-    "@babel/runtime-corejs3": "^7.27.6",
-    "@sentry/react": "^8.24.0",
-    "antd": "^5.24.7",
-    "axios": "^1.8.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "5.3.4",
-    "zustand": "^5.0.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.3",
-    "@babel/plugin-proposal-decorators": "^7.27.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.27.4",
-    "@babel/preset-env": "^7.24.3",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.3",
-    "@types/react": "^19.1.2",
-    "@types/react-router-config": "^5.0.11",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.6.0",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-import": "^1.13.8",
-    "clean-webpack-plugin": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^7.1.2",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.2",
-    "less": "^4.3.0",
-    "less-loader": "^12.2.0",
-    "mini-css-extract-plugin": "^1.6.2",
-    "prettier": "^3.2.5",
-    "style-loader": "^4.0.0",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "webpack": "^4.47.0",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3",
-    "webpack-merge": "^4.2.2"
-  }
+    "name": "create-react-web",
+    "version": "1.0.0",
+    "description": "前端脚手架",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack-dev-server --config build/webpack.config.dev.js",
+        "build": "webpack --config build/webpack.config.prod.js",
+        "analyze": "cross-env ANALYZE=true  npm run build",
+        "dev": "vite",
+        "prepare": "husky install"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/3254954760/create-react-web.git"
+    },
+    "author": "李勇",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/runtime": "^7.27.6",
+        "@babel/runtime-corejs3": "^7.27.6",
+        "@sentry/react": "^8.24.0",
+        "antd": "^5.24.7",
+        "axios": "^1.8.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-config": "^5.1.1",
+        "react-router-dom": "5.3.4",
+        "zustand": "^5.0.6"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.3",
+        "@babel/plugin-proposal-decorators": "^7.27.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.27.4",
+        "@babel/preset-env": "^7.24.3",
+        "@babel/preset-react": "^7.24.1",
+        "@babel/preset-typescript": "^7.24.3",
+        "@types/react": "^19.1.2",
+        "@types/react-router-config": "^5.0.11",
+        "@types/react-router-dom": "^5.3.3",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "@vitejs/plugin-react": "^4.6.0",
+        "babel-loader": "^8.3.0",
+        "babel-plugin-import": "^1.13.8",
+        "clean-webpack-plugin": "^4.0.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "^7.1.2",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.34.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^4.5.2",
+        "husky": "^8.0.0",
+        "less": "^4.3.0",
+        "less-loader": "^12.2.0",
+        "lint-staged": "^15.5.2",
+        "mini-css-extract-plugin": "^1.6.2",
+        "prettier": "^3.2.5",
+        "style-loader": "^4.0.0",
+        "typescript": "^5.8.3",
+        "vite": "^6.3.5",
+        "webpack": "^4.47.0",
+        "webpack-bundle-analyzer": "^4.10.2",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.3",
+        "webpack-merge": "^4.2.2"
+    },
+    "lint-staged": {
+        "*.{js,jsx,tsx}": [
+            "prettier --write"
+        ],
+        "*.{css,scss,less}": [
+            "prettier --write"
+        ]
+    }
 }
