--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@babel/preset-env": "^7.24.3",
         "@babel/preset-react": "^7.24.1",
         "@babel/preset-typescript": "^7.24.3",
+        "@babel/register": "^7.28.3",
         "@types/react": "^19.1.2",
         "@types/react-router-config": "^5.0.11",
         "@types/react-router-dom": "^5.3.3",
@@ -45,6 +46,7 @@
         "@vitejs/plugin-react": "^4.6.0",
         "babel-loader": "^8.3.0",
         "babel-plugin-import": "^1.13.8",
+        "babel-plugin-module-resolver": "^5.0.2",
         "clean-webpack-plugin": "^4.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^7.1.2",
