--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,7 +6,8 @@
             "@router/*": ["./src/router/*"],
             "@layout/*": ["./src/layout/*"],
             "@model/*": ["./src/model/*"],
-            "@service/*": ["./src/service/*"]
+            "@service/*": ["./src/service/*"],
+            "@locale/*": ["./src/locale/*"]
         }
     }
 }
