--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@sentry/react": "^8.24.0",
         "antd": "^5.24.7",
         "axios": "^1.8.4",
+        "i18next": "^25.7.3",
+        "react-i18next": "^15.1.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-config": "^5.1.1",
