--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "前端脚手架",
     "main": "index.js",
+    "workspaces": [
+        "package/*"
+    ],
     "scripts": {
         "start": "webpack-dev-server --config build/webpack.config.dev.js",
         "build": "webpack --config build/webpack.config.prod.js",
@@ -21,6 +24,8 @@
         "@babel/runtime": "^7.27.6",
         "@babel/runtime-corejs3": "^7.27.6",
         "@sentry/react": "^8.24.0",
+        "@create-react-web/hook": "workspace:^1.0.0",
+        "@create-react-web/ui": "workspace:^1.0.0",
         "antd": "^5.24.7",
         "axios": "^1.8.4",
         "i18next": "^25.7.3",
