--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "dependencies": {
         "@babel/runtime": "^7.27.6",
         "@babel/runtime-corejs3": "^7.27.6",
-        "@sentry/react": "^8.24.0",
         "@create-react-web/hook": "workspace:^1.0.0",
         "@create-react-web/ui": "workspace:^1.0.0",
+        "@sentry/react": "^8.24.0",
         "antd": "^5.24.7",
         "axios": "^1.8.4",
         "i18next": "^25.7.3",
-        "react-i18next": "^15.1.2",
+        "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-i18next": "^15.1.2",
         "react-router-config": "^5.1.1",
         "react-router-dom": "5.3.4",
         "zustand": "^5.0.6"
