--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
+            "@/*": ["./src/*"],
             "@pages/*": ["./src/pages/*"],
             "@router/*": ["./src/router/*"],
             "@layout/*": ["./src/layout/*"],
